// <auto-generated />
using System;
using MainServer.Data;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;

#nullable disable

namespace MainServer.Migrations
{
    [DbContext(typeof(AppDbContext))]
    [Migration("20260521124659_AddUsers")]
    partial class AddUsers
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "9.0.0")
                .HasAnnotation("Relational:MaxIdentifierLength", 64);

            MySqlModelBuilderExtensions.AutoIncrementColumns(modelBuilder);

            modelBuilder.Entity("MainServer.Models.Prediction", b =>
                {
                    b.Property<int>("PredictionId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    MySqlPropertyBuilderExtensions.UseMySqlIdentityColumn(b.Property<int>("PredictionId"));

                    b.Property<double>("ConfidenceScore")
                        .HasColumnType("double");

                    b.Property<string>("PredictedCategory")
                        .IsRequired()
                        .HasColumnType("longtext");

                    b.Property<DateTime>("PredictionTime")
                        .HasColumnType("datetime(6)");

                    b.Property<int>("ReadingId")
                        .HasColumnType("int");

                    b.Property<string>("RiskLevel")
                        .IsRequired()
                        .HasColumnType("longtext");

                    b.HasKey("PredictionId");

                    b.HasIndex("ReadingId")
                        .IsUnique();

                    b.ToTable("Predictions");
                });

            modelBuilder.Entity("MainServer.Models.Room", b =>
                {
                    b.Property<int>("RoomId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    MySqlPropertyBuilderExtensions.UseMySqlIdentityColumn(b.Property<int>("RoomId"));

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("longtext");

                    b.HasKey("RoomId");

                    b.ToTable("Rooms");
                });

            modelBuilder.Entity("MainServer.Models.SensorDevice", b =>
                {
                    b.Property<int>("SensorId")
                        .HasColumnType("int");

                    b.Property<int?>("RoomId")
                        .HasColumnType("int");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasColumnType("longtext");

                    b.HasKey("SensorId");

                    b.HasIndex("RoomId");

                    b.ToTable("Sensors");
                });

            modelBuilder.Entity("MainServer.Models.SensorReading", b =>
                {
                    b.Property<int>("ReadingId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    MySqlPropertyBuilderExtensions.UseMySqlIdentityColumn(b.Property<int>("ReadingId"));

                    b.Property<int?>("Aqi")
                        .HasColumnType("int");

                    b.Property<string>("Classification")
                        .HasColumnType("longtext");

                    b.Property<double>("Co2Level")
                        .HasColumnType("double");

                    b.Property<double?>("Eco2")
                        .HasColumnType("double");

                    b.Property<double>("Humidity")
                        .HasColumnType("double");

                    b.Property<int>("SensorId")
                        .HasColumnType("int");

                    b.Property<double?>("SmokeLevel")
                        .HasColumnType("double");

                    b.Property<double>("Temperature")
                        .HasColumnType("double");

                    b.Property<DateTime>("Timestamp")
                        .HasColumnType("datetime(6)");

                    b.Property<double?>("Tvoc")
                        .HasColumnType("double");

                    b.HasKey("ReadingId");

                    b.HasIndex("SensorId");

                    b.ToTable("Readings");
                });

            modelBuilder.Entity("MainServer.Models.User", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    MySqlPropertyBuilderExtensions.UseMySqlIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("PasswordHash")
                        .IsRequired()
                        .HasColumnType("longtext");

                    b.Property<string>("Role")
                        .IsRequired()
                        .HasColumnType("longtext");

                    b.Property<string>("Username")
                        .IsRequired()
                        .HasColumnType("longtext");

                    b.HasKey("Id");

                    b.ToTable("Users");
                });

            modelBuilder.Entity("MainServer.Models.Prediction", b =>
                {
                    b.HasOne("MainServer.Models.SensorReading", "Reading")
                        .WithOne("Prediction")
                        .HasForeignKey("MainServer.Models.Prediction", "ReadingId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Reading");
                });

            modelBuilder.Entity("MainServer.Models.SensorDevice", b =>
                {
                    b.HasOne("MainServer.Models.Room", "Room")
                        .WithMany("Sensors")
                        .HasForeignKey("RoomId")
                        .OnDelete(DeleteBehavior.SetNull);

                    b.Navigation("Room");
                });

            modelBuilder.Entity("MainServer.Models.SensorReading", b =>
                {
                    b.HasOne("MainServer.Models.SensorDevice", "Sensor")
                        .WithMany("Readings")
                        .HasForeignKey("SensorId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Sensor");
                });

            modelBuilder.Entity("MainServer.Models.Room", b =>
                {
                    b.Navigation("Sensors");
                });

            modelBuilder.Entity("MainServer.Models.SensorDevice", b =>
                {
                    b.Navigation("Readings");
                });

            modelBuilder.Entity("MainServer.Models.SensorReading", b =>
                {
                    b.Navigation("Prediction");
                });
#pragma warning restore 612, 618
        }
    }
}
