' =========================
' Graphical relational schema v2 for Kamtjatka Fire Detection System
' Based on relational-schema.md v2.
' =========================

@startuml
title Kamtjatka Fire Detection System - Graphical Relational Schema v2

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam monochrome true
skinparam linetype ortho
skinparam nodesep 85
skinparam ranksep 85

left to right direction

class Residence <<table>> {
  residence_id : int <<PK>>
  name : varchar(100)
  address : varchar(255)
}

class Room <<table>> {
  room_id : int <<PK>>
  room_number : varchar(50)
  floor : int
  room_type : varchar(50)
  occupancy_status : varchar(50)
  residence_id : int <<FK>>
}

class User <<table>> {
  user_id : int <<PK>>
  full_name : varchar(150)
  email : varchar(150) <<UNIQUE>>
  password_hash : varchar(255)
  phone_number : varchar(50)
  role : varchar(50)
}

class Resident <<table>> {
  user_id : int <<PK, FK>>
  student_id : varchar(100) <<UNIQUE>>
  room_id : int <<FK nullable>>
}

class Manager <<table>> {
  user_id : int <<PK, FK>>
  employee_id : varchar(100) <<UNIQUE>>
  office_location : varchar(100)
  residence_id : int <<FK>>
}

class Sensors <<table>> {
  SensorId : int <<PK>>
  SerialNumber : varchar(100) <<UNIQUE>>
  SensorType : varchar(100)
  InstalledAt : datetime
  Status : varchar(50)
  FirmwareVersion : varchar(50)
  RoomId : int <<FK>>
}

class Readings <<table>> {
  ReadingId : int <<PK>>
  Timestamp : datetime
  Temperature : double
  Humidity : double
  Co2Level : double
  SmokeLevel : double <<nullable>>
  Tvoc : double <<nullable>>
  Eco2 : double <<nullable>>
  Aqi : int <<nullable>>
  Classification : varchar(100) <<nullable>>
  SensorId : int <<FK>>
}

class Predictions <<table>> {
  PredictionId : int <<PK>>
  PredictionTime : datetime
  PredictedCategory : varchar(100)
  ConfidenceScore : double
  RiskLevel : varchar(50)
  ReadingId : int <<FK, UNIQUE>>
}

class DetectionEvent <<table>> {
  event_id : int <<PK>>
  start_time : datetime
  end_time : datetime <<nullable>>
  event_status : varchar(50)
  severity_level : varchar(50)
  detected_as : varchar(100)
  suspected_cause : varchar(100)
  room_id : int <<FK>>
  PredictionId : int <<FK nullable>>
}

class DetectionEventReading <<table>> {
  event_id : int <<PK, FK>>
  ReadingId : int <<PK, FK>>
}

class Alert <<table>> {
  alert_id : int <<PK>>
  created_at : datetime
  alert_type : varchar(50)
  message : varchar(500)
  priority : varchar(50)
  status : varchar(50)
  detection_event_id : int <<FK>>
  manager_id : int <<FK nullable>>
  resident_id : int <<FK nullable>>
}

class IncidentReport <<table>> {
  report_id : int <<PK>>
  created_at : datetime
  description : varchar(1000)
  outcome : varchar(255)
  cost_amount : decimal(10,2)
  detection_event_id : int <<FK, UNIQUE>>
  resident_id : int <<FK nullable>>
  reviewed_by_id : int <<FK nullable>>
}

Residence -[hidden]down- Room
User -[hidden]down- Resident
Resident -[hidden]right- Manager
Sensors -[hidden]down- Readings
Readings -[hidden]down- Predictions
DetectionEvent -[hidden]down- Alert
Alert -[hidden]right- IncidentReport

Residence "1" -- "0..*" Room : residence_id
Residence "1" -- "0..*" Manager : residence_id

Room "1" -- "0..*" Resident : room_id
Room "1" -- "0..*" Sensors : RoomId
Room "1" -- "0..*" DetectionEvent : room_id

User "1" -- "0..1" Resident : user_id
User "1" -- "0..1" Manager : user_id

Sensors "1" -- "0..*" Readings : SensorId
Readings "1" -- "0..1" Predictions : ReadingId

Predictions "1" -- "0..*" DetectionEvent : PredictionId
DetectionEvent "1" -- "1..*" DetectionEventReading : event_id
Readings "1" -- "0..*" DetectionEventReading : ReadingId

DetectionEvent "1" -- "0..*" Alert : detection_event_id
Manager "1" -- "0..*" Alert : manager_id
Resident "1" -- "0..*" Alert : resident_id

DetectionEvent "1" -- "0..1" IncidentReport : detection_event_id
Resident "1" -- "0..*" IncidentReport : resident_id
Manager "1" -- "0..*" IncidentReport : reviewed_by_id

@enduml
